# tmp-tests

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  HySoPConfig.cmake.in  HySoPConfigVersion.cmake.in  INSTALL  README.md  config.hpp.cmake  opencl_explore.py  setup.py.in  sort_f90.py
cmake/: FindFFTW.cmake  FindPythonFull.cmake  FindPythonModule.cmake  FindSWIG.cmake  GoogleTestHelper.cmake  HySoPInstallSetup.cmake  HySoPTests.cmake  HysopVersion.cmake  MyTools.cmake  PythonInstallSetup.cmake  find_python_install.py  fortran_utils.cmake
hysop/: .f2py_f2cmap  .pyflymakerc  __init__.py  __init__.py.in  constants.py  default_methods.py  f2hysop.pyf  f2hysop.pyf.in  methods.py  methods_keys.py  testsenv.py
hysop/domain/: box.py  control_box.py  domain.py  mesh.py  porous.py  submesh.py  subsets.py
hysop/domain/tests/: test_box.py  test_control_box.py  test_mesh.py  test_porous.py  test_regular_subset.py  test_submesh.py  test_subset.py
hysop/f2py/: fftw2py.f90  fftw2py.pyf  parameters.f90  parameters.pyf  scales2py.f90  scales2py.pyf
hysop/fakef2py/fftw2py/: __init__.py
hysop/fakef2py/scales2py/: __init__.py
hysop/fields/: __init__.py  continuous.py  discrete.py  variable_parameter.py
hysop/fields/tests/: func_for_tests.py  test_field.py  test_variable.py
hysop/fortran/: arnoldi2py.pyf  template.f95  template.pyf
hysop/gpu/: QtRendering.py  __init__.py  config_cayman.py  config_default.py  config_k20m.py  gpu_diffusion.py  gpu_discrete.py  gpu_kernel.py  gpu_multiphase_baroclinic_rhs.py  gpu_multiresolution_filter.py  gpu_operator.py  gpu_particle_advection.py  gpu_transfer.py  kernel_benchmark.py  multi_gpu_particle_advection.py  tools.py
hysop/gpu/cl_src/: common.cl
hysop/gpu/tests/: test_advection_nullVelocity.py  test_advection_randomVelocity.py  test_copy.py  test_gpu_multiresolution_filter.py  test_multiphase_baroclinic.py  test_opencl_environment.py  test_transposition.py
hysop/gpu/visu/: __init__.py  gpu-mc.cl  marchingcube.py
hysop/mpi/: __init__.py  bridge.py  bridge_inter.py  bridge_overlap.py  main_var.py  topology.py
hysop/mpi/tests/: test_bridge.py  test_topology.py  utils.py
hysop/numerics/: __init__.py  differential_operations.py  finite_differences.py  interpolation.py  method.py  remeshing.py  update_ghosts.py  utils.py
hysop/numerics/integrators/: __init__.py  euler.py  odesolver.py  runge_kutta2.py  runge_kutta3.py  runge_kutta4.py
hysop/numerics/tests/: test_diffOp.py  test_integrators.py  test_update_ghosts.py
hysop/operator/: __init__.py  absorption_BC.py  adapt_timestep.py  advection.py  advection_dir.py  analytic.py  baroclinic.py  baroclinic_from_rhs.py  computational.py  continuous.py  curlAndDiffusion.py  custom.py  density.py  differential.py  diffusion.py  drag_and_lift.py  energy_enstrophy.py  forcing.py  hdf_io.py  low_pass_filt.py  monitoringPoints.py  multiphase_baroclinic_rhs.py  multiphase_gradp.py  multiresolution_filter.py  penalization.py  poisson.py  profiles.py  redistribute.py  redistribute_inter.py  redistribute_intra.py  redistribute_overlap.py  reprojection.py  residual.py  spectrum.py  stretching.py  velocity_correction.py
hysop/operator/discrete/: __init__.py  absorption_BC.py  adapt_timestep.py  baroclinic.py  baroclinic_from_rhs.py  curlAndDiffusion_fft.py  custom.py  density.py  differential.py  diffusion_fft.py  discrete.py  drag_and_lift.py  energy_enstrophy.py  forcing.py  low_pass_filt.py  monitoringPoints.py  multiphase_gradp.py  multiresolution_filter.py  particle_advection.py  penalization.py  poisson_fft.py  profiles.py  (+6 more)
hysop/problem/: __init__.py  navier_stokes.py  problem.py  problem_tasks.py  problem_with_GLRendering.py  simulation.py  transport.py
hysop/tools/: __init__.py  indices.py  io_utils.py  misc.py  numpywrappers.py  parameters.py  plotDrag.py  problem2dot.py  profiler.py  profiling.py  remeshing_formula_parsing.py  sys_utils.py
src/: CMakeLists.txt  VectorCalc.f90  client_data.f90
src/extras/: arnoldi.f90
src/fftw/: Diffusion.f90  Poisson.f90  fft2d.f90  fft3d.f90  fftw.cpp  fftw.hpp
src/hysop++/main/: diffSolver.cpp  planner.cpp  poissonSolver.cpp
src/hysop++/src/data/: accumulatorIndex.h  index.h
src/hysop++/src/data/memory/: fftwAllocator.h  minimalAllocator.h
src/hysop++/src/data/multi_array/: <  const_multi_array_ref.h  const_multi_array_view.h  multi_array.h  multi_array_clean.h  multi_array_defines.h  multi_array_ext.h  multi_array_impl.h  multi_array_ref.h  multi_array_view.h
src/hysop++/src/detail/: index_seq.h
src/hysop++/src/domain/: boundary.cpp  boundary.h  domain.h  domainConfiguration.h
src/hysop++/src/fft/: extension.cpp  extension.h  fftDomainConfiguration.h  fftw3.cpp  fftw3.h  fftwComplex.h  planner.h  transform.cpp  transform.h
src/hysop++/src/maths/: polynomial.h  quad_maths.h
src/hysop++/src/solver/: diffSolver.h  fftDiffSolver.h  fftPoissonSolver.h  poissonSolver.h
src/hysop++/src/utils/: constants.h  default.h  defines.h  types.h  utils.cpp  utils.h
src/hysop++/tests/: CMakeLists.txt
src/hysop++/tests/testDiffSolver/: testDiffSolver.cpp  testDiffSolver.h
src/hysop++/tests/testPlanner/: testPlanner.cpp  testPlanner.h
src/hysop++/tests/testPoissonSolver/: CMakeLists.txt  testPoissonSolver.cpp  testPoissonSolver.h
src/hysop++/tests/testPolynoms/: CMakeLists.txt  main.cpp  testPolynoms.cpp  testPolynoms.h
src/main/: initFieldsTests.f90  main.cxx  main.f90
src/scalesInterface/: precision_tools.f90  structure_tools.f90
src/scalesInterface/layout/: cart_mesh_tools.f90  cart_topology.f90
src/scalesInterface/output/: vtkxml.f90  vtkxml_bin.f90
src/scalesInterface/particles/: advec.f90  advecX.f90  advecY.f90  advecZ.f90  advec_Vector.f90  advec_common_group.F90  advec_common_interpol.F90  advec_common_remesh.F90  advec_correction.f90  advec_remesh_Mprime.f90  advec_remesh_lambda.f90  advec_type.f90  advec_variables.f90  interpolation_velo.f90
src/scalesInterface/particles/advec_line/: advecX_line.f90  advecY_line.f90  advecZ_line.f90  advec_common_line.f90  advec_remesh_formula_line.f90  advec_remesh_line.F90
(+138 files in other folders)
